--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-
 .innerHeader {
     display: flex;
     align-items: center;
+    justify-content: flex-start;
     color: white;
 }
 
@@ -9,7 +9,15 @@
     height: 40px;
 }
 
-.footerRemark a{
+.content {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.footerRemark a {
     color: white;
     font-size: 24px;
 }
@@ -21,8 +29,8 @@
 
 /* ########### Buchfeld ######### */
 .bookfield {
-    width: 250px;
-    height: 450px;
+    width: 320px;
+    height: 500px;
     background-color: #0D3240;
     border: 2px solid white;
     border-radius: 16px;
@@ -32,17 +40,17 @@
 
 .bookHeader {
     border-bottom: 1px solid white;
-    height: 32px;
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-top-left-radius : 16px;
-    border-top-right-radius : 16px;
+    border-top-left-radius: 16px;
+    border-top-right-radius: 16px;
 }
 
 .pictureField {
     background-color: #114758;
-    height: 70px;
+    height: 100px;
     border-bottom: 1px solid white;
     display: flex;
     justify-content: center;
@@ -50,7 +58,7 @@
 }
 
 .bookfield img {
-    height: 50px;
+    height: 70px;
 }
 
 .bookDatas {
@@ -62,7 +70,7 @@
 }
 
 .priceField {
-    color: whitesmoke;
+    color: white;
 }
 
 .likeField {
@@ -70,6 +78,7 @@
     align-items: center;
     gap: 10px;
 }
+
 .likeField img {
     width: 16px;
 }
@@ -82,13 +91,14 @@
 }
 
 .commentsField {
+    background-color: brown;
     height: 215px;
     padding: 12px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border-bottom-left-radius : 16px;
-    border-bottom-right-radius : 16px;
+    border-bottom-left-radius: 16px;
+    border-bottom-right-radius: 16px;
 }
 
 h4 {
@@ -110,6 +120,3 @@ h4 {
 .inputField img {
     height: 28px;
 }
-
-
-
