--- a/style.css
+++ b/style.css
@@ -78,10 +78,13 @@
     display: flex;
     align-items: center;
     gap: 10px;
+    height: 20px;
 }
 
 .likeField img {
     width: 18px;
+    height: 18px;
+    cursor: pointer;
 }
 
 .dataField {
